# driftvane

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/driftvane/: __init__.py  detector.py  report.py
src/driftvane/detectors/: __init__.py  embedding.py  latency.py  response.py  retrieval.py
tests/: test_embedding.py  test_latency.py  test_report.py  test_response.py  test_retrieval.py  test_signal.py
